[metadata]
name = pyvalidator
version = 1.0.0
description = Simple input validation tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Suhwan Jee
author_email = jsh56son@gmail.com

[options]
python_requires = >=3.6,<3.7
setup_requires =
    setuptools>=40.1.0
install_requires =

[options.extras_require]
test =
    atomicwrites==1.2.1
    more-itertools==4.3.0
    pluggy==0.8.0
    py==1.7.0
    pytest==3.9.2
    pytest-cov==2.6.0

[options.packages.find]
include = pyvalidator.*
